--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,10 +28,10 @@ jobs:
           python-version: '3.x'
       - name: Install and update Bikeshed
         run: |
-          pip install bikeshed
+          pip install bikeshed linkchecker
           bikeshed update
-      - name: Build HTML files
-        run: make html
+      - name: Build and check links
+        run: make linkcheck
       - name: Setup Pages
         uses: actions/configure-pages@v4
       - name: Upload artifact
