Run workflow in branches as well

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,13 +4,10 @@ on:
   push:
     branches:
       - master
-
+  pull_request:
+    branches:
+      - master
   workflow_dispatch:
-
-permissions:
-  contents: read
-  pages: write
-  id-token: write
 
 concurrency:
   group: "pages"
@@ -42,6 +39,13 @@ jobs:
           path: './build/html'
 
   deploy:
+    permissions:
+      contents: read
+      pages: write
+      id-token: write
+
+    if: github.event_name != 'pull_request'
+
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
